--- a/index.html
+++ b/index.html
@@ -3,67 +3,261 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Scaledesk</title>
+    <meta name="description" content="">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+    <!--Roboto font included-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-    <!--   navigation -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>Outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
 
 
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                   Header and Navigation
+///////////////////////////////////////////////////////////////////////////////////-->
+
+
+
+
+<header>
+    <nav class="navbar  navbar-fixed-top custom-nav">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+
+                <a class="navbar-brand custom-brand" href="index.html"><img src="img/logo.png" class="h-logo" alt="Logo"></a>
+
+                <div id="mySidenav" class="sidenav">
+
+                    <div class="v-alignmnt">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                        <div class="row">
+                            <div class="col-md-6">
+                    <a href="#"  class="mytitle">Hiring</a>
+                            </div>
+                            <div class="col-md-6">
+                    <a href="#">Services</a>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                    <a href="#">Team</a>
+                            </div>
+                            <div class="col-md-6">
+                    <a href="#">Portfolio</a>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="#">About</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="#">Contact</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <button type="button" class="humberger" onclick="openNav()" class="cde"  aria-expanded="false">
+
+                    <span class="icon-bar1"></span>
+                    <span class="icon-bar2"></span>
+                    <span class="icon-bar3"></span>
+                </button>
+            </div>
+
+        </div>
+    </nav>
+</header>
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                  Full screen search Section
+///////////////////////////////////////////////////////////////////////////////////-->
+
+<!--<div class="search-container">-->
+    <!--&lt;!&ndash;<div class="search-closed">&ndash;&gt;-->
+        <!--<input type="search" placeholder="Type Here" />-->
+    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</div>-->
+
+
+
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                   Hero Section
+///////////////////////////////////////////////////////////////////////////////////-->
+
+
+
+<div class="hero-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+
+
+          <!--      temp-->
+                <!--<div class="welcome-message">
+                    <h1 class="title">Scaledesk</h1>
+                    <div class="clear">
+                        <p class="hero-txt">
+                            ASE was started in 2016 , by a small motley crowd of Science & Technology Entrepreneur Parks and Technology Business Entrepreneurs
+                        </p>
+
+
+                        <div>
+                            <button class="btn button">
+                                <span>View More</span>
+                            </button>
+
+                            &nbsp;&nbsp;
+
+                            <button class="btn button button-white">
+                                <span>View More</span>
+                            </button>
+
+                        </div>
+                    </div>
+
+
+
+
+                </div>-->
+            </div>
+
+            <div class="col-md-6">
+               <!-- temp-->
+         <!--       <img src="img/hero-info.png" alt="" width="100%">-->
+
+            </div>
+
+        </div>
+    </div>
+
 </div>
 
-<!-- Use any element to open the sidenav -->
-<div onclick="openNav()" class="cde"></div>
-
-<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
-<!-- <div id="main">
-
-</div> -->
 
 
 
- <!--    /navigation -->
-  
-        
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                   About us Section
+///////////////////////////////////////////////////////////////////////////////////-->
+<!--temp-->
+<!--<section id="about-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                <img src="img/about.png" alt="" width="100%">
 
-          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+            </div>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+            <div class="col-md-8">
+                <h2>About Us</h2>
+                <p>ASE was started in 2016 , by a small motley crowd of Science & Technology Entrepreneur Parks and Technology Business Entrepreneurs that were certified under the umbrella of the Department of Industrial Promotions and Policies (DIPP) , Government of India. Today it has grown to a membership base of 300+ organisations that are into entrepreneurship development and incubation.</p>
+                <br>
 
-        <script src="js/main.js"></script>
+                <p>Its main objective is “To promote business incubation support activities in the country through exchangte of information, sharing of experience, and other networking assistance among Startup Companies approved by Department of Industrial Promotions and Policies (DIPP)".</p>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            </div>
+
+        </div>
+    </div>
+
+</section>-->
+
+
+
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                   Footer Section
+///////////////////////////////////////////////////////////////////////////////////-->
+
+<section id="footer-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <img src="img/logo.png" alt="">
+                <br>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet blanditiis corporis enim explicabo laboriosam laborum magnam molestias nemo nulla possimus quod recusandae reiciendis rerum, tempora tenetur voluptatum! Accusantium, voluptates. </p>
+
+                <ul class="social-list">
+                    <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href=""><i class="fa fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fa fa-instagram"></i></a></li>
+
+                </ul>
+
+            </div>
+
+            <div class="col-md-3">
+                <p><a href="">Home</a></p>
+                <p><a href="">About Us</a></p>
+                <p><a href="">Our Members</a></p>
+                <p><a href="">Discussions</a></p>
+                <p><a href="">News</a></p>
+                <p><a href="">Awards</a></p>
+                <p><a href="">Contact Us</a></p>
+
+
+
+            </div>
+
+
+            <div class="col-md-4">
+
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+
+
+<script src="https://use.fontawesome.com/d4bfffe885.js"></script>
+
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+<script src="js/vendor/bootstrap.min.js"></script>
+
+<script src="js/main.js"></script>
+
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+</script>
+
+
+
+</body>
 </html>
