contact us n testimonial section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <h2 class="v-large-title">Get e-Commerce Web & Android App</h2>
+                        <h1 class="v-large-title">Get e-Commerce Web & Android App</h1>
                         <p class="h-para f-w m-b-40 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit.      Ab atque beatae dolor eaque illo nam nobis voluptatibus! Et natus quae quos                                          ratione reiciendis. Magni molestias nemo nulla quidem,sint                                                  voluptatibus.</p>
 
                         <button class="btn button">
@@ -165,7 +165,7 @@
 
 
 
-                                  s Section
+                                  service Section
 ///////////////////////////////////////////////////////////////////////////////////-->
 
 <section id="services-section">
@@ -599,6 +599,371 @@
     </div>
 
 </section>
+
+
+
+
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                  before client Section
+///////////////////////////////////////////////////////////////////////////////////-->
+
+<section id="beforeclient-section" class="beforeclient-section">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-3 text-center">
+
+                <div class="services-card">
+
+
+                    <img src="img/one.png "  alt="service1" width="50" height="40" style="margin:0 auto;">
+
+
+                    <p class="m-t-20 f-w"><b>FREE 1 YEAR HOSTING</b></p>
+                    <p class="h-para f-w">Lorem ipsum dolor splt, Lorem ipsum dolor.</p>
+
+
+
+                </div>
+
+            </div>
+
+            <div class="col-md-3 text-center">
+                <div class="services-card">
+                    <span class="diagonal-line"></span>
+                    <img src="img/house.png "  alt="service2" width="50" height="40" style="margin:0 auto;">
+
+                    <p class="m-t-20 f-w"><b>FREE 1 YEAR HOSTING</b></p>
+                    <p class="h-para f-w">Lorem ipsum dolor splt, Lorem ipsum dolor.</p>
+
+
+                </div>
+
+            </div>
+
+
+            <div class="col-md-3 text-center">
+                <div class="services-card">
+
+                    <span class="diagonal-line"></span>
+                    <img src="img/free.png "  alt="service2" width="50" height="40" style="margin:0 auto;">
+
+                    <p class="m-t-20 f-w"><b>FREE 1 YEAR HOSTING</b></p>
+                    <p class="h-para f-w">Lorem ipsum dolor splt, Lorem ipsum dolor.</p>
+
+
+
+                </div>
+
+
+            </div>
+
+
+            <div class="col-md-3 text-center">
+                <div class="services-card">
+                    <span class="diagonal-line"></span>
+                    <img src="img/user.png "  alt="service2" width="50" height="40" style="margin:0 auto;">
+
+                    <p class="m-t-20 f-w"><b>FREE 1 YEAR HOSTING</b></p>
+                    <p class="h-para f-w">Lorem ipsum dolor splt, Lorem ipsum dolor.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+</section>
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                   clients Section
+///////////////////////////////////////////////////////////////////////////////////-->
+
+
+<div class="client">
+
+    <div class="row">
+
+
+        <div class="col-md-12">
+            <br>
+            <h2 class="mytitle f-40" style="padding-left: 65px;">Our<br> clients</h2>
+
+            <div class="row ">
+                <div style="padding: 30px;">
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/pes.png" class="img-responsive" alt="Logo">
+
+
+                    </div>
+
+
+
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/jarte.png" class="img-responsive" alt="Logo">
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/zolo.png" class="img-responsive" alt="Logo">
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/pooja.png" class="img-responsive" alt="Logo">
+
+                    </div>
+
+                </div>
+
+            </div>
+            </div>
+
+            <div class="row m-t-20 m-b-40">
+
+                <div style="padding: 30px;">
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/salina.png" class="img-responsive" alt="Logo">
+
+
+                    </div>
+
+
+
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/machinery.png" class="img-responsive" alt="Logo">
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/rw.png" class="img-responsive" alt="Logo">
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <div class="card-logo">
+                        <img src="img/jarte.png" class="img-responsive" alt="Logo">
+
+                    </div>
+
+                </div>
+
+            </div>
+            </div>
+
+
+
+
+        </div>
+
+
+    </div>
+
+</div>
+
+
+<!--///////////////////////////////////////////////////////////////////////////////////
+                                   Testimonial Section
+///////////////////////////////////////////////////////////////////////////////////-->
+
+
+<div class="testimonial">
+
+    <div class="row">
+
+
+        <div class="col-md-12">
+
+            <!--testimonial-->
+
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12" data-wow-delay="0.2s">
+                        <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+                            <!-- Bottom Carousel Indicators -->
+                           <!-- <ol class="carousel-indicators">
+                                <li data-target="#quote-carousel" ><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
+                                </li>
+                                <li data-target="#quote-carousel"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
+                                </li>
+                                <li data-target="#quote-carousel"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
+                                </li>
+                            </ol>-->
+                            <!-- Carousel Slides / Quotes -->
+                            <div class="carousel-inner text-center">
+
+                                <!-- Quote 1 -->
+                                <div class="item active">
+
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+                                                <div class="testimonial-pic">
+
+                                                <img class="img-responsive " src="img/test.png" alt="">
+                                                </div>
+                                                <p class="f-w">PRABHAKAR TIWARI - THE FOUNDER</p>
+                                                <p><small>Someone famous</small></p>
+                                                <p class="f-w">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. !</p>
+
+                                            </div>
+                                        </div>
+
+                                </div>
+                                <!-- Quote 2 -->
+                                <div class="item">
+
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+                                                <div class="testimonial-pic">
+
+                                                    <img class="img-responsive " src="img/test.png" alt="">
+                                                </div>
+                                                <p class="f-w">PRABHAKAR TIWARI - THE FOUNDER</p>
+                                                <p><small>Someone famous</small></p>
+                                                <p class="f-w">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+
+                                            </div>
+                                        </div>
+
+                                </div>
+                                <!-- Quote 3 -->
+                                <div class="item">
+
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+                                                <div class="testimonial-pic">
+
+                                                    <img class="img-responsive " src="img/test.png" alt="">
+                                                </div>
+
+                                                <p class="f-w">PRABHAKAR TIWARI - THE FOUNDER</p>
+                                                <p><small>Someone famous</small></p>
+                                                <p class="f-w">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. .</p>
+
+                                            </div>
+                                        </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Carousel Buttons Next/Prev -->
+                            <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
+                            <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+           <!-- testimonial end-->
+
+
+        </div>
+
+
+    </div>
+
+</div>
+
+
+
+
+
+
+<!--contact us-->
+
+
+<section id="contact-section">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-12">
+                <h2 class="mytitle f-40" style="padding-left: 78px;">Contact<br>Us</h2>
+                </div>
+                <br>
+
+<div class="form-custom">
+<form method="post" name="contact" id="contact" novalidate="novalidate">
+    <div class="row">
+
+        <div class="col-md-6">
+    <div class="form-group">
+        <input type="text" class="form-control custom-input-box" placeholder="Your Name" id="name" name="name">
+    </div>
+            </div>
+
+        <div class="col-md-6">
+
+    <div class="form-group">
+        <input type="email" class="form-control custom-input-box" placeholder="Your Email" id="eml" name="eml">
+    </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="row">
+
+        <div class="col-md-6">
+            <div class="form-group">
+                <input type="number" class="form-control custom-input-box" placeholder="Your Phone Number" id="name" name="name">
+            </div>
+        </div>
+
+        <div class="col-md-6">
+
+            <div class="form-group">
+                <input type="text" class="form-control custom-input-box" placeholder="Your Query" id="eml" name="eml">
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="form-group1">
+        <textarea placeholder="Messages" rows="4" class="form-control custom-input-box msg-input" id="comment" name="comment"></textarea>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-12 m-t-30 text-center">
+            <button type="submit" class="btn btn-default footer-send-btn">Submit Now</button>
+        </div>
+    </div>
+
+
+</form>
+</div>
+
+            </div>
+        </div>
+    </section>
+
 
 <!--///////////////////////////////////////////////////////////////////////////////////
                                    Footer Section
