--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <!--Roboto font included-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+ <!--   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">-->
+   <!-- <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">-->
+    <!--<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">-->
+  <!--  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,700" rel="stylesheet">-->
+    <link href="http://overpass-30e2.kxcdn.com/overpass.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
