--- a/index.html
+++ b/index.html
@@ -562,7 +562,10 @@
                     <img src="img/team.png" alt="" width="100%">
 
                 </div>
-                <div class="card-size card-team">
+                <div class="card-size card-team m-b-20 p-40">
+                    <p><b>TEAM MEMBER </b></p>
+                    <p><small>Employee</small></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adig elit. magni natus rerum tenetur. Aliquam expta.</p>
 
 
                 </div>
@@ -576,10 +579,14 @@
                     <img src="img/team.png" alt="" width="100%">
 
                 </div>
-                <div class="card-size card-team">
+                <div class="card-size card-team m-b-20 p-40">
+                    <p><b>TEAM MEMBER </b></p>
+                    <p><small>Employee</small></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adig elit. magni natus rerum tenetur. Aliquam expta.</p>
 
 
                 </div>
+
 
 
             </div>
@@ -590,10 +597,14 @@
                     <img src="img/team.png" alt="" width="100%">
 
                 </div>
-                <div class="card-size card-team">
+                <div class="card-size card-team m-b-20 p-40">
+                    <p><b>TEAM MEMBER </b></p>
+                    <p><small>Employee</small></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adig elit. magni natus rerum tenetur. Aliquam expta.</p>
 
 
                 </div>
+
 
 
             </div>
@@ -804,6 +815,7 @@
 
 
             <div class="container">
+                <div class="p-b-80">
                 <div class="row">
                     <div class="col-md-12" data-wow-delay="0.2s">
                         <div class="carousel slide" data-ride="carousel" id="quote-carousel">
@@ -878,6 +890,7 @@
                             <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
 
