background from css

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <img src="img/s1.png "  alt="service1" width="50" height="40" style="margin:0 auto;">
 
 
-                        <p class="m-t-20"><b>WEB DEVELOPMENT</b></p>
+                        <p class="m-t-20 sub-heading">WEB DEVELOPMENT</p>
                             <p class="h-para">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -201,7 +201,7 @@
                         <div class="services-card">
                             <img src="img/s2.png "  alt="service2" width="50" height="40" style="margin:0 auto;">
 
-                            <p class="m-t-20"><b>WEB DEVELOPMENT</b></p>
+                            <p class="m-t-20 sub-heading">WEB DEVELOPMENT</p>
                             <p class="h-para">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -217,7 +217,7 @@
 
                             <img src="img/s3.png " alt="service3" width="50" height="40" style="margin:0 auto;">
 
-                            <p class="m-t-20"><b>WEB DEVELOPMENT</b></p>
+                            <p class="m-t-20 sub-heading">WEB DEVELOPMENT</p>
                             <p class="h-para">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -227,7 +227,7 @@
                         <div class="services-card">
                             <img src="img/s4.png " alt="service4" width="50" height="40" style="margin:0 auto;" >
 
-                            <p class="m-t-20"><b>WEB DEVELOPMENT</b></p>
+                            <p class="m-t-20 sub-heading">WEB DEVELOPMENT</p>
                             <p class="h-para">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -238,15 +238,18 @@
             </div>
 
 
-            <div class="col-md-5 col-sm-4 col-xs-12 m-t-20 text-right">
+            <div class="col-md-5 col-sm-4 col-xs-12 m-t-20 text-right pos-relative">
 
                 <div class="p-t-40">
                 <img src="img/Website.png" alt="" width="340" height="322">
                 </div>
 
-            </div>
 
         </div>
+
+            <div id="bg-trigle-shape">
+            </div>
+    </div>
     </div>
 
 </section>
@@ -276,8 +279,8 @@
                     <div class="col-md-4 text-center">
 
                         <div class="services-card text-center">
-                            <img src="img/f1.png "  alt="feature1" width="50" height="40" style="margin:0 auto;">
-                            <p class="m-t-20 f-w"><b>WEB DEVELOPMENT</b></p>
+                            <img src="img/f1.png "  alt="feature1" width="40" height="40" style="margin:0 auto;">
+                            <p class="m-t-20 sub-heading f-w">WEB DEVELOPMENT</p>
                             <p class="h-para f-w">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -285,8 +288,8 @@
 
                     <div class="col-md-4 text-center">
                         <div class="services-card">
-                            <img src="img/f2.png "  alt="feature2" width="50" height="40" style="margin:0 auto;">
-                            <p class="m-t-20 f-w"><b>WEB DEVELOPMENT</b></p>
+                            <img src="img/f2.png "  alt="feature2" width="40" height="40" style="margin:0 auto;">
+                            <p class="m-t-20 sub-heading f-w">WEB DEVELOPMENT</p>
                             <p class="h-para f-w">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -294,8 +297,8 @@
 
                     <div class="col-md-4 text-center">
                         <div class="services-card">
-                            <img src="img/f3.png "  alt="feature3" width="50" height="40" style="margin:0 auto;">
-                            <p class="m-t-20 f-w"><b>WEB DEVELOPMENT</b></p>
+                            <img src="img/f3.png "  alt="feature3" width="40" height="40" style="margin:0 auto;">
+                            <p class="m-t-20 sub-heading f-w">WEB DEVELOPMENT</p>
                             <p class="h-para f-w">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -308,8 +311,8 @@
                 <div class="row m-b-20">
                     <div class="col-md-4 text-center">
                         <div class="services-card">
-                            <img src="img/f4.png "  alt="feature4" width="50" height="40" style="margin:0 auto;">
-                            <p class="m-t-20 f-w"><b>WEB DEVELOPMENT</b></p>
+                            <img src="img/f4.png "  alt="feature4" width="40" height="40" style="margin:0 auto;">
+                            <p class="m-t-20 sub-heading f-w">WEB DEVELOPMENT</p>
                             <p class="h-para f-w">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -317,8 +320,8 @@
 
                     <div class="col-md-4 text-center">
                         <div class="services-card">
-                            <img src="img/f5.png "  alt="feature5" width="50" height="40" style="margin:0 auto;">
-                            <p class="m-t-20 f-w"><b>WEB DEVELOPMENT</b></p>
+                            <img src="img/f5.png "  alt="feature5" width="40" height="40" style="margin:0 auto;">
+                            <p class="m-t-20 sub-heading f-w">WEB DEVELOPMENT</p>
                             <p class="h-para f-w">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -326,8 +329,8 @@
 
                     <div class="col-md-4 text-center">
                         <div class="services-card">
-                            <img src="img/f6.png "  alt="feature6" width="50" height="40" style="margin:0 auto;">
-                            <p class="m-t-20 f-w"><b>WEB DEVELOPMENT</b></p>
+                            <img src="img/f6.png "  alt="feature6" width="40" height="40" style="margin:0 auto;">
+                            <p class="m-t-20 sub-heading f-w">WEB DEVELOPMENT</p>
                             <p class="h-para f-w">Lorem ipsum dolor splt, consectetur adipicing yhing elit. Lorem ipsum dolor.</p>
                         </div>
 
@@ -342,6 +345,9 @@
         </div>
     </div>
 
+    <div id="bg-triangledown-shape">
+    </div>
+
 </section>
 
 
@@ -353,6 +359,8 @@
 
 
 <section id="work-section">
+
+
     <div class="container">
 
 
@@ -438,6 +446,7 @@
         </div>
 
     </div>
+
 </section>
 
 
@@ -543,6 +552,7 @@
                                   Team Section
 ///////////////////////////////////////////////////////////////////////////////////-->
 
+<!--
 <section id="Team-section">
     <div class="container">
         <div class="row">
@@ -614,6 +624,7 @@
     </div>
 
 </section>
+-->
 
 
 
